objects/fferpcore__ExchangeRateHistory__c.object
<CustomObject>
    <customHelpPage>fferpcore__ExchangeRateHistoryHelp</customHelpPage>
    <description>Stores a log of changes to exchange rate details.</description>
    <fields>
        <fullName>fferpcore__EndDate__c</fullName>
        <description>The last date that the exchange rate is valid.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fferpcore__Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The group that the exchange rate entry relates to.</description>
        <label>Group</label>
        <referenceTo>fferpcore__ExchangeRateGroup__c</referenceTo>
        <relationshipLabel>Exchange Rate History</relationshipLabel>
        <relationshipName>ExchangeRateHistory</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__RateCurrency__c</fullName>
        <description>The currency ISO code for the exchange rate.</description>
        <inlineHelpText>The currency ISO code for the exchange rate.</inlineHelpText>
        <label>Rate Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__RateType__c</fullName>
        <description>The type of exchange rate.</description>
        <label>Rate Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Rate__c</fullName>
        <description>The exchange rate for the specific currency.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__RelativeCurrency__c</fullName>
        <description>The default currency for the related group.</description>
        <formula>LEFT(TEXT(fferpcore__Group__r.fferpcore__DefaultCurrency__c), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__StartDate__c</fullName>
        <description>The first date that the exchange rate is valid.</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Exchange Rate History</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__Group__c</columns>
        <columns>fferpcore__RateType__c</columns>
        <columns>fferpcore__RelativeCurrency__c</columns>
        <columns>fferpcore__RateCurrency__c</columns>
        <columns>fferpcore__Rate__c</columns>
        <columns>fferpcore__StartDate__c</columns>
        <columns>fferpcore__EndDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERH-{0000000000}</displayFormat>
        <label>History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rate History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>